# tauri-plugin-bluetooth

./: Cargo.toml  README.md  build.rs  package.json  rollup.config.js
android/: build.gradle.kts  local.properties  settings.gradle
android/btleplug/: build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt
android/src/main/java/com/plugin/sample/: ExamplePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  handler.rs  lib.rs  mobile.rs  models.rs
