[package]
name = "tauri-plugin-bluetooth"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-bluetooth"

[dependencies]
# tauri = { version = "2.0.0-beta.13" }
tauri = { version = "2.0.0-beta.16" }
serde = "1.0"
thiserror = "1.0"
btleplug = "0.11.5"
tokio = { version = "1.32.0", default-features = false, features = ["macros", "rt"] }
anyhow = "1.0.82"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.13", features = ["build"] }
tauri-build = "2.0.0-beta.13"
