[package]
name = "tauri-plugin-bluetooth"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2024"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-bluetooth"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_arch = "xtensa")))'.dependencies]
# tauri = { version = "2.0.0-beta.13" }
tauri = { version = "2.1.1" }
serde = "1.0"
thiserror = "1.0"
btleplug = "0.11.5"
tokio = { version = "1.32.0", default-features = false, features = ["macros", "rt"] }
anyhow = "1.0.82"
once_cell = "1.19.0"
lazy_static = "1.4.0"
tracing = "0.1.40"
uuid = "1.11.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.19.0" }
jni-utils = "0.1.1"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_arch = "xtensa")))'.build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
tauri-build = { version = "2.0.3", features = [] }
